# cc-keyboard-firmware

./: .gitmodules  CMakeLists.txt  configure.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
src/hal/: CMakeLists.txt  matrix.cpp  matrix.hpp
src/usb/: device.hpp
